--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from "@/components/Header.astro";
+import SideIcons from "@/components/SideIcons.astro";
 
 type Props = {
   title: string;
@@ -20,6 +21,7 @@ const { title, description } = Astro.props;
   </head>
   <body class="flex min-h-screen flex-col items-center">
     <Header />
+    <SideIcons />
     <slot />
   </body>
 </html>
