--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -9,7 +9,7 @@
     </h1>
   </section>
   <video
-    class="h-screen w-full object-cover animate-duration-[2s] animate-ease-in-out"
+    class="h-screen w-full object-cover object-top animate-duration-[2s] animate-ease-in-out"
     autoplay
     loop
     muted
