Añadir componentes de Experiencia y HeaderIcons.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,6 @@
 ---
 import { Icons } from "@/components/Icons";
+import HeaderIcons from "@/components/HeaderIcons.astro";
 ---
 
 <header
@@ -20,6 +21,7 @@ import { Icons } from "@/components/Icons";
     <a href="#experience">Experience</a>
     <a href="#projects">Projects</a>
     <a href="#skills">Skill</a>
+    <HeaderIcons />
     <a
       href="#header-nav"
       class="absolute right-6 top-6 rounded-full border-2 border-primary bg-primary p-2 text-foreground transition-colors duration-300 hover:bg-transparent hover:text-primary"
