--- a/src/components/HeaderIcons.astro
+++ b/src/components/HeaderIcons.astro
@@ -2,22 +2,20 @@
 import { Icons } from "@/components/Icons";
 ---
 
-<div
-  class="fixed z-40 hidden flex-col items-center justify-between gap-y-4 md:bottom-12 md:left-8 md:flex lg:bottom-16 lg:left-12 lg:gap-y-6"
->
+<div class="z-40 flex items-center justify-between gap-x-4 md:hidden">
   <div
     class="cursor-pointer rounded-full bg-transparent p-2 transition-colors duration-300 hover:bg-primary"
   >
-    <Icons.mail className="h-5 w-5 shrink-0" />
+    <Icons.mail className="h-6 w-6 shrink-0" />
   </div>
   <div
     class="cursor-pointer rounded-full bg-transparent p-2 transition-colors duration-300 hover:bg-primary"
   >
-    <Icons.instagram className="h-5 w-5 shrink-0" />
+    <Icons.instagram className="h-6 w-6 shrink-0" />
   </div>
   <div
     class="cursor-pointer rounded-full bg-transparent p-2 transition-colors duration-300 hover:bg-primary"
   >
-    <Icons.linkedin className="h-5 w-5 shrink-0" />
+    <Icons.linkedin className="h-6 w-6 shrink-0" />
   </div>
 </div>
