--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -3,7 +3,7 @@
   <section
     class="animate container absolute z-20 m-auto flex h-full w-full animate-fade-up items-center justify-center"
   >
-    <h1 class="max-w-screen-md text-wrap px-4 text-center text-8xl">
+    <h1 class="max-w-screen-lg text-wrap text-center text-8xl">
       Lorem ipsum dolor sit amet, <span class="text-primary">consectetur</span> adipiscing
       elit.
     </h1>
