--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "@/layouts/Layout.astro";
 import Video from "@/components/Video.astro";
+import Experience from "@/components/Experience.astro";
 ---
 
 <Layout
@@ -9,8 +10,8 @@ import Video from "@/components/Video.astro";
 >
   <Video />
   <main class="container w-full">
-    <section class="container h-screen"></section>
-    <!-- <Experience/> -->
+    <Experience />
+
     <!-- <WhatIDo/> -->
     <!-- <WorkBento/> -->
     <!-- <AboutMe/> -->
