Actualizar estilos de la página de experiencia y video

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,10 +1,117 @@
-<div class="h-screen w-full">
-  <section
-    class="animate container mx-auto flex h-full w-full items-start justify-center"
-  >
-    <article class="grid max-w-screen-lg grid-cols-4 text-4xl">
-      <span class="col-span-1">June 2020 - Present</span>
-      <p class="col-span-3">Growth Marketing</p>
-    </article>
+<div class="w-full">
+  <section class="flex h-full w-full flex-col justify-start">
+    <div class="container flex max-w-screen-lg">
+      <h2 class="mt-6 text-sm uppercase leading-8 tracking-widest">
+        Work Experience
+      </h2>
+    </div>
+    <div
+      class="border-border group w-full border-b transition-colors duration-300 hover:bg-primary"
+    >
+      <article
+        class="container grid h-36 max-w-screen-lg grid-cols-12 items-center text-3xl"
+      >
+        <span
+          class="col-span-4 transition-colors duration-100 group-hover:text-background"
+          >June 2023 - Present</span
+        >
+        <div class="col-span-8 transition-all duration-100 group-hover:hidden">
+          <p class="">Growth Marketing</p>
+          <p class="text-base">Teilur</p>
+        </div>
+
+        <p
+          class="col-span-8 hidden text-base text-background transition-all duration-300 group-hover:block"
+        >
+          I'm in charge of the growth marketing strategy for Teilur, a startup
+          that is revolutionizing the way people learn and teach. I'm
+          responsible for the entire marketing funnel, from acquisition to
+          retention, and I'm also in charge of the marketing team. I'm also
+          responsible for the entire marketing funnel, from acquisition to
+          retention, and I'm also in charge of the marketing team.
+        </p>
+      </article>
+    </div>
+    <div
+      class="border-border group w-full border-b transition-colors duration-300 hover:bg-primary"
+    >
+      <article
+        class="container grid h-36 max-w-screen-lg grid-cols-12 items-center text-3xl"
+      >
+        <span
+          class="col-span-4 transition-colors duration-100 group-hover:text-background"
+          >June 2023 - Present</span
+        >
+        <div class="col-span-8 transition-all duration-100 group-hover:hidden">
+          <p class="">Growth Marketing</p>
+          <p class="text-base">Teilur</p>
+        </div>
+
+        <p
+          class="col-span-8 hidden text-base text-background transition-all duration-300 group-hover:block"
+        >
+          I'm in charge of the growth marketing strategy for Teilur, a startup
+          that is revolutionizing the way people learn and teach. I'm
+          responsible for the entire marketing funnel, from acquisition to
+          retention, and I'm also in charge of the marketing team. I'm also
+          responsible for the entire marketing funnel, from acquisition to
+          retention, and I'm also in charge of the marketing team.
+        </p>
+      </article>
+    </div>
+    <div
+      class="border-border group w-full border-b transition-colors duration-300 hover:bg-primary"
+    >
+      <article
+        class="container grid h-36 max-w-screen-lg grid-cols-12 items-center text-3xl"
+      >
+        <span
+          class="col-span-4 transition-colors duration-100 group-hover:text-background"
+          >June 2023 - Present</span
+        >
+        <div class="col-span-8 transition-all duration-100 group-hover:hidden">
+          <p class="">Growth Marketing</p>
+          <p class="text-base">Teilur</p>
+        </div>
+
+        <p
+          class="col-span-8 hidden text-base text-background transition-all duration-300 group-hover:block"
+        >
+          I'm in charge of the growth marketing strategy for Teilur, a startup
+          that is revolutionizing the way people learn and teach. I'm
+          responsible for the entire marketing funnel, from acquisition to
+          retention, and I'm also in charge of the marketing team. I'm also
+          responsible for the entire marketing funnel, from acquisition to
+          retention, and I'm also in charge of the marketing team.
+        </p>
+      </article>
+    </div>
+    <div
+      class="border-border group w-full border-b transition-colors duration-300 hover:bg-primary"
+    >
+      <article
+        class="container grid h-36 max-w-screen-lg grid-cols-12 items-center text-3xl"
+      >
+        <span
+          class="col-span-4 transition-colors duration-100 group-hover:text-background"
+          >June 2023 - Present</span
+        >
+        <div class="col-span-8 transition-all duration-100 group-hover:hidden">
+          <p class="">Growth Marketing</p>
+          <p class="text-base">Teilur</p>
+        </div>
+
+        <p
+          class="col-span-8 hidden text-base text-background transition-all duration-300 group-hover:block"
+        >
+          I'm in charge of the growth marketing strategy for Teilur, a startup
+          that is revolutionizing the way people learn and teach. I'm
+          responsible for the entire marketing funnel, from acquisition to
+          retention, and I'm also in charge of the marketing team. I'm also
+          responsible for the entire marketing funnel, from acquisition to
+          retention, and I'm also in charge of the marketing team.
+        </p>
+      </article>
+    </div>
   </section>
 </div>
