--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,8 +9,11 @@ import Experience from "@/components/Experience.astro";
   description="Passionate professional in Marketing and Audiovisual Content."
 >
   <Video />
-  <main class="container w-full">
-    <Experience />
+  <main class="w-full">
+    <div id="experience" class="-mt-16 pt-16 md:-mt-20 md:pt-20">
+      <Experience />
+    </div>
+    <div class="h-screen"></div>
 
     <!-- <WhatIDo/> -->
     <!-- <WorkBento/> -->
