--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -1,9 +1,9 @@
 <div class="relative w-full">
   <div class="absolute inset-0 z-10 bg-black bg-opacity-50"></div>
   <section
-    class="animate container absolute z-20 m-auto flex h-full w-full animate-fade-up items-center justify-center"
+    class="animate absolute z-20 m-auto flex h-full w-full animate-fade-up items-center justify-center"
   >
-    <h1 class="max-w-screen-lg text-wrap text-center text-8xl">
+    <h1 class="container max-w-screen-lg text-wrap text-center text-8xl">
       Lorem ipsum dolor sit amet, <span class="text-primary">consectetur</span> adipiscing
       elit.
     </h1>
