--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,14 +17,24 @@ import HeaderIcons from "@/components/HeaderIcons.astro";
     id="header-menu"
     class="fixed inset-0 flex h-dvh w-full -translate-y-full flex-col items-start gap-y-8 bg-background/90 px-4 py-20 text-4xl text-foreground transition-transform duration-300 target:translate-y-0 md:items-center md:text-6xl"
   >
-    <a href="#top">Home</a>
-    <a href="#experience">Experience</a>
-    <a href="#projects">Projects</a>
-    <a href="#skills">Skill</a>
+    <a href="#top" class="transition-colors duration-300 hover:text-primary"
+      >Home</a
+    >
+    <a
+      href="#experience"
+      class="transition-colors duration-150 hover:text-primary">Experience</a
+    >
+    <a
+      href="#projects"
+      class="transition-colors duration-150 hover:text-primary">Projects</a
+    >
+    <a href="#skills" class="transition-colors duration-150 hover:text-primary"
+      >Skill</a
+    >
     <HeaderIcons />
     <a
       href="#header-nav"
-      class="absolute right-6 top-6 rounded-full border-2 border-primary bg-primary p-2 text-foreground transition-colors duration-300 hover:bg-transparent hover:text-primary"
+      class="absolute right-6 top-6 rounded-full border-2 border-primary bg-primary p-2 text-foreground transition-colors duration-150 hover:bg-transparent hover:text-primary"
     >
       <Icons.close />
     </a>
