--- a/src/components/SideIcons.astro
+++ b/src/components/SideIcons.astro
@@ -3,7 +3,7 @@ import { Icons } from "@/components/Icons";
 ---
 
 <div
-  class="fixed z-40 hidden flex-col items-center justify-between gap-y-4 md:bottom-12 md:left-8 md:flex lg:bottom-16 lg:left-12 lg:gap-y-6"
+  class="fixed z-40 hidden flex-col items-center justify-between gap-y-4 md:bottom-12 md:right-8 md:flex lg:bottom-16 lg:right-12 lg:gap-y-6"
 >
   <div
     class="cursor-pointer rounded-full bg-transparent p-2 transition-colors duration-300 hover:bg-primary"
