--- a/src/components/sections/Video.astro
+++ b/src/components/sections/Video.astro
@@ -1,9 +1,10 @@
 <div class="relative w-full">
-  <div class="absolute inset-0 z-10 bg-black bg-opacity-50"></div>
   <section
-    class="animate absolute z-20 m-auto flex h-full w-full animate-fade-up items-center justify-center"
+    class="absolute z-20 flex h-full w-full items-center justify-start text-3xl md:items-end"
   >
-    <h1 class="container max-w-screen-lg text-wrap text-center text-8xl">
+    <h1
+      class="mx-8 mb-12 max-w-lg text-wrap rounded-md bg-black/50 p-4 backdrop-blur-md md:ml-12 md:text-5xl"
+    >
       Lorem ipsum dolor sit amet, <span class="text-primary">consectetur</span> adipiscing
       elit.
     </h1>
@@ -15,6 +16,6 @@
     muted
     playsinline
     id="main-video"
-    preload="metadata"><source src="/video.mp4" type="video/mp4" /></video
+    preload="metadata"><source src="/video.webm" type="video/webm" /></video
   >
 </div>
