--- a/src/components/SkillCard.astro
+++ b/src/components/SkillCard.astro
@@ -1,9 +1,9 @@
 <div class="w-full border-b border-border">
   <article
-    class="mx-auto flex h-28 w-full max-w-screen-lg items-center justify-center text-8xl leading-tight"
+    class="mx-auto flex h-20 w-full max-w-screen-lg items-center justify-center text-3xl leading-tight md:h-28 md:text-8xl"
   >
     <p
-      class="animate-fade-out-down container leading-none text-background [animation-range:cover_10%_contain_50%] [animation-timeline:view(block)]"
+      class="container animate-fade-out-down leading-none text-background [animation-range:cover_10%_contain_50%] [animation-timeline:view(block)]"
     >
       <slot />
     </p>
