Add Footer and About Me sections

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -37,6 +37,11 @@ import HeaderIcons from "@/components/HeaderIcons.astro";
       class="uppercase tracking-wide transition-colors duration-300 hover:text-primary"
       >Skill</a
     >
+    <a
+      href="#about-me"
+      class="uppercase tracking-wide transition-colors duration-300 hover:text-primary"
+      >About Me</a
+    >
     <HeaderIcons />
     <a
       href="#header-nav"
