--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Video from "@/components/sections/Video.astro";
 import Experience from "@/components/sections/Experience.astro";
 import Skills from "@/components/sections/Skills.astro";
 import Content from "@/components/sections/Content.astro";
+import AboutMe from "@/components/sections/AboutMe.astro";
 ---
 
 <Layout
@@ -22,12 +23,10 @@ import Content from "@/components/sections/Content.astro";
     <div id="skills" class="-mt-16 pt-16 md:-mt-20 md:pt-20">
       <Skills />
     </div>
-    <div class="container h-screen text-foreground"></div>
 
-    <!-- <WhatIDo/> -->
-    <!-- <WorkBento/> -->
-    <!-- <AboutMe/> -->
-    <!-- <Contact/> -->
+    <div id="about-me" class="-mt-16 pt-16 md:-mt-20 md:pt-20">
+      <AboutMe />
+    </div>
   </main>
 </Layout>
 
