--- a/src/components/SideIcons.astro
+++ b/src/components/SideIcons.astro
@@ -3,8 +3,13 @@ import { Icons } from "@/components/Icons";
 ---
 
 <div
-  class="fixed z-40 hidden flex-col items-center justify-between gap-y-4 md:bottom-12 md:right-8 md:flex lg:bottom-16 lg:right-12 lg:gap-y-6"
+  class="fixed z-40 hidden flex-col items-center justify-between gap-y-4 md:bottom-12 md:right-8 md:flex lg:bottom-16 lg:right-12"
 >
+  <div
+    class="cursor-pointer rounded-full bg-transparent p-2 transition-colors duration-300 hover:bg-primary"
+  >
+    <Icons.phone className="h-5 w-5 shrink-0" />
+  </div>
   <div
     class="cursor-pointer rounded-full bg-transparent p-2 transition-colors duration-300 hover:bg-primary"
   >
