--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from "@/components/Header.astro";
+import Footer from "@/components/Footer.astro";
 import SideIcons from "@/components/SideIcons.astro";
 
 type Props = {
@@ -23,6 +24,7 @@ const { title, description } = Astro.props;
     <Header />
     <SideIcons />
     <slot />
+    <Footer />
   </body>
 </html>
 <style is:global>
