--- a/src/components/ExperienceCard.astro
+++ b/src/components/ExperienceCard.astro
@@ -11,7 +11,7 @@ const { dateStart, dateEnd, title, company, description } = Astro.props;
 ---
 
 <div
-  class="group w-full border-b border-border transition-colors duration-300 hover:bg-primary"
+  class="group w-full border-b border-border py-4 transition-colors duration-300 hover:bg-primary md:py-0"
 >
   <article
     class="container flex max-w-screen-lg flex-col gap-y-2 text-xl md:grid md:h-36 md:grid-cols-12 md:items-center md:text-3xl"
