Update font weight in Footer component

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import { Icons } from "./Icons";
 ---
 
 <footer
-  class="flex h-10 w-full items-center justify-between bg-primary px-4 text-background md:h-12 md:px-8 lg:px-12"
+  class="flex h-10 w-full items-center justify-between bg-primary px-4 font-bold text-background md:h-12 md:px-8 lg:px-12"
 >
   <span>© Laura Calero 2024</span>
   <span class="flex items-center">
