--- a/src/components/SectionTitle.astro
+++ b/src/components/SectionTitle.astro
@@ -1,3 +1,3 @@
-<h2 class="my-6 text-sm uppercase leading-8 tracking-widest">
+<h2 class="my-6 text-sm font-bold uppercase leading-8 tracking-widest">
   <slot />
 </h2>
