Add font-semibold to AboutMe section and Video section

--- a/src/components/sections/AboutMe.astro
+++ b/src/components/sections/AboutMe.astro
@@ -10,7 +10,7 @@ import SectionTitle from "@/components/SectionTitle.astro";
     <div
       class="container m-auto flex w-full max-w-screen-lg flex-col items-center justify-between gap-8 px-8 md:flex-row"
     >
-      <h2 class="max-w-xl text-pretty text-xl md:text-5xl">
+      <h2 class="max-w-xl text-pretty text-xl font-semibold md:text-5xl">
         Lorem ipsum dolor sit amet, <span class="text-primary">consectetur</span
         > adipiscing elit. Sed a hendrerit risus. Curabitur quis purus suscipit,
         fringilla libero sed, eleifend massa. Proin elementum auctor mauris eget
