--- a/src/components/sections/Video.astro
+++ b/src/components/sections/Video.astro
@@ -10,7 +10,7 @@
     </h1>
   </section>
   <video
-    class="h-screen w-full object-cover object-top animate-duration-[2s] animate-ease-in-out"
+    class="h-screen w-full object-cover object-top font-semibold animate-duration-[2s] animate-ease-in-out"
     autoplay
     loop
     muted
