--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,7 +15,7 @@ import HeaderIcons from "@/components/HeaderIcons.astro";
   >
   <nav
     id="header-menu"
-    class="fixed inset-0 flex h-dvh w-full -translate-y-full flex-col items-start gap-y-6 bg-background/95 px-8 py-20 text-3xl text-foreground transition-transform duration-300 target:translate-y-0 md:gap-y-8 md:px-12 md:text-5xl"
+    class="fixed inset-0 flex h-dvh w-full -translate-y-full flex-col items-start gap-y-6 bg-background/95 px-8 py-20 text-3xl font-bold text-foreground transition-transform duration-300 target:translate-y-0 md:gap-y-8 md:px-12 md:text-5xl"
   >
     <a
       href="#top"
