Update font weight in Video section

--- a/src/components/sections/Video.astro
+++ b/src/components/sections/Video.astro
@@ -3,14 +3,14 @@
     class="absolute z-20 flex h-full w-full items-center justify-start text-3xl md:items-end"
   >
     <h1
-      class="mx-8 mb-12 max-w-lg text-wrap rounded-md bg-black/50 p-4 backdrop-blur-md md:ml-12 md:text-5xl"
+      class="mx-8 mb-12 max-w-lg text-wrap rounded-md bg-black/50 p-4 font-semibold backdrop-blur-md md:ml-12 md:text-5xl"
     >
       Lorem ipsum dolor sit amet, <span class="text-primary">consectetur</span> adipiscing
       elit.
     </h1>
   </section>
   <video
-    class="h-screen w-full object-cover object-top font-semibold animate-duration-[2s] animate-ease-in-out"
+    class="h-screen w-full object-cover object-top animate-duration-[2s] animate-ease-in-out"
     autoplay
     loop
     muted
