Update font styles and animation in SkillCard and Layout components

--- a/src/components/SkillCard.astro
+++ b/src/components/SkillCard.astro
@@ -3,7 +3,7 @@
     class="mx-auto flex h-20 w-full max-w-screen-lg items-center justify-center text-3xl leading-tight md:h-32 md:text-8xl"
   >
     <p
-      class="container animate-fade-out-down font-bold leading-none text-background [animation-range:cover_10%_contain_50%] [animation-timeline:view(block)]"
+      class="container animate-fade-out-down font-semibold leading-none text-background [animation-range:cover_10%_contain_50%] [animation-timeline:view(block)]"
     >
       <slot />
     </p>
