--- a/src/components/sections/AboutMe.astro
+++ b/src/components/sections/AboutMe.astro
@@ -17,7 +17,7 @@ import SectionTitle from "@/components/SectionTitle.astro";
         commodo.
       </h2>
       <img
-        src="/images/img-2.webp"
+        src="/images/img-2.jpg"
         alt="About image"
         class="order-first h-40 w-40 rounded-full object-cover md:order-last md:h-96 md:w-96"
       />
