--- a/src/components/sections/Content.astro
+++ b/src/components/sections/Content.astro
@@ -14,20 +14,32 @@ import BentoItem from "@/components/BentoItem.astro";
       <BentoItem
         type="image"
         orientation="vertical"
-        src="/images/img-4.webp"
+        src="/images/img-1.jpg"
         alt="Image 1"
       />
       <BentoItem
         type="image"
         orientation="horizontal"
-        src="/images/img-2.webp"
+        src="/images/img-2.jpg"
         alt="Image 2"
       />
       <BentoItem
         type="image"
         orientation="horizontal"
-        src="/images/img-1.webp"
+        src="/images/img-3.jpg"
         alt="Image 3"
+      />
+      <BentoItem
+        type="image"
+        orientation="vertical"
+        src="/images/img-4.jpg"
+        alt="Image 4"
+      />
+      <BentoItem
+        type="image"
+        orientation="vertical"
+        src="/images/img-5.jpg"
+        alt="Image 5"
       />
       <BentoItem
         type="video"
