feat: Add new images to Content section

--- a/src/components/sections/Content.astro
+++ b/src/components/sections/Content.astro
@@ -42,6 +42,36 @@ import BentoItem from "@/components/BentoItem.astro";
         alt="Image 5"
       />
       <BentoItem
+        type="image"
+        orientation="vertical"
+        src="/images/img-6.jpg"
+        alt="Image 6"
+      />
+      <BentoItem
+        type="image"
+        orientation="horizontal"
+        src="/images/img-7.jpg"
+        alt="Image 7"
+      />
+      <BentoItem
+        type="image"
+        orientation="horizontal"
+        src="/images/img-8.jpg"
+        alt="Image 8"
+      />
+      <BentoItem
+        type="image"
+        orientation="vertical"
+        src="/images/img-9.jpg"
+        alt="Image 9"
+      />
+      <BentoItem
+        type="image"
+        orientation="vertical"
+        src="/images/img-10.jpg"
+        alt="Image 10"
+      />
+      <BentoItem
         type="video"
         orientation="horizontal"
         src="/video.webm"
