Update images and add video to Content section

--- a/src/components/sections/AboutMe.astro
+++ b/src/components/sections/AboutMe.astro
@@ -8,18 +8,27 @@ import SectionTitle from "@/components/SectionTitle.astro";
       <SectionTitle>About me</SectionTitle>
     </div>
     <div
-      class="container m-auto flex w-full max-w-screen-lg flex-col items-center justify-between gap-8 px-8 md:flex-row"
+      class="container m-auto flex w-full max-w-screen-lg flex-col items-center gap-8 px-8 md:flex-row"
     >
-      <h2 class="max-w-xl text-pretty text-xl font-semibold md:text-5xl">
-        Lorem ipsum dolor sit amet, <span class="text-primary">consectetur</span
-        > adipiscing elit. Sed a hendrerit risus. Curabitur quis purus suscipit,
-        fringilla libero sed, eleifend massa. Proin elementum auctor mauris eget
-        commodo.
+      <h2 class="w-full text-pretty text-xl font-semibold md:text-2xl">
+        Hey there, I'm a creative spirit and strategic thinker with 4 years of
+        experience bringing content to life and making <span
+          class="text-primary">marketing magic</span
+        > in the digital world. I have a knack for crafting audiovisual material
+        that not only wins over audiences but also delivers <span
+          class="text-primary">big results</span
+        >. I stay up-to-date with the latest trends like artificial
+        intelligence, and I'm always excited to learn more to boost my skills.
+        My journey has taken me through managing and fine-tuning marketing
+        campaigns on platforms like <span class="text-primary"
+          >TikTok and Facebook</span
+        >, using cool AI tools, and creating content for social media that gets
+        people talking.
       </h2>
       <img
         src="/images/img-2.jpg"
         alt="About image"
-        class="order-first h-40 w-40 rounded-full object-cover md:order-last md:h-96 md:w-96"
+        class="order-first h-40 w-40 rounded-full object-cover md:order-last md:h-80 md:w-80"
       />
     </div>
   </section>
