--- a/src/components/sections/Content.astro
+++ b/src/components/sections/Content.astro
@@ -30,6 +30,12 @@ import BentoItem from "@/components/BentoItem.astro";
         alt="Image 3"
       />
       <BentoItem
+        type="video"
+        orientation="horizontal"
+        src="/video.webm"
+        alt="Video"
+      />
+      <BentoItem
         type="image"
         orientation="vertical"
         src="/images/img-4.jpg"
