--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -9,32 +9,32 @@ import SectionTitle from "@/components/SectionTitle.astro";
       <SectionTitle> Work Experience </SectionTitle>
     </div>
     <ExperienceCard
-      dateStart="June 2023"
+      dateStart="May 2023"
       dateEnd="Present"
-      title="Growth Marketing"
-      company="Teilur"
-      description="I'm in charge of the growth marketing strategy for Teilur, a startup that is revolutionizing the way people learn and teach. I'm responsible for the entire marketing funnel, from acquisition to retention, and I'm also in charge of the marketing team."
+      title="Growth Marketer"
+      company="Teilur.ai"
+      description="I'm responsible for creating audiovisual content and strategies for social media. I also handle AI tools for campaign optimization."
     />
     <ExperienceCard
-      dateStart="June 2023"
-      dateEnd="Present"
-      title="Growth Marketing"
-      company="Teilur"
-      description="I'm in charge of the growth marketing strategy for Teilur, a startup that is revolutionizing the way people learn and teach. I'm responsible for the entire marketing funnel, from acquisition to retention, and I'm also in charge of the marketing team."
+      dateStart="December 2022"
+      dateEnd="May 2024"
+      title="Ecommerce Manager"
+      company="Grupo Caicedo SAS"
+      description="I manage sales campaigns on TikTok ads, increasing sales by 20%. I also create and optimize landing pages, and use AI tools to optimize campaigns."
     />
     <ExperienceCard
-      dateStart="June 2023"
-      dateEnd="Present"
-      title="Growth Marketing"
-      company="Teilur"
-      description="I'm in charge of the growth marketing strategy for Teilur, a startup that is revolutionizing the way people learn and teach. I'm responsible for the entire marketing funnel, from acquisition to retention, and I'm also in charge of the marketing team."
+      dateStart="September 2022"
+      dateEnd="December 2022"
+      title="Content Marketing Intern"
+      company="Global Commerce Media"
+      description="I participated in SEO practices, digital marketing, and web content writing."
     />
     <ExperienceCard
-      dateStart="June 2023"
-      dateEnd="Present"
-      title="Growth Marketing"
-      company="Teilur"
-      description="I'm in charge of the growth marketing strategy for Teilur, a startup that is revolutionizing the way people learn and teach. I'm responsible for the entire marketing funnel, from acquisition to retention, and I'm also in charge of the marketing team."
+      dateStart="August 2020"
+      dateEnd="December 2022"
+      title="Social Media Manager & Co-founder"
+      company="Semiluna Joyas"
+      description="I create audiovisual content and develop strategies for social media and campaigns through Facebook Ads."
     />
   </section>
 </div>
