--- a/src/components/sections/AboutMe.astro
+++ b/src/components/sections/AboutMe.astro
@@ -26,7 +26,7 @@ import SectionTitle from "@/components/SectionTitle.astro";
         people talking.
       </h2>
       <img
-        src="/images/img-2.jpg"
+        src="/images/about-me.jpg"
         alt="About image"
         class="order-first h-40 w-40 rounded-full object-cover md:order-last md:h-80 md:w-80"
       />
