--- a/src/components/sections/Content.astro
+++ b/src/components/sections/Content.astro
@@ -32,7 +32,7 @@ import BentoItem from "@/components/BentoItem.astro";
       <BentoItem
         type="video"
         orientation="horizontal"
-        src="/video.webm"
+        src="/reel-earcuff.mp4"
         alt="Video"
       />
       <BentoItem
@@ -48,8 +48,14 @@ import BentoItem from "@/components/BentoItem.astro";
         alt="Image 5"
       />
       <BentoItem
-        type="image"
+        type="video"
         orientation="vertical"
+        src="/reel-earcuff.mp4"
+        alt="Video"
+      />
+      <BentoItem
+        type="image"
+        orientation="horizontal"
         src="/images/img-6.jpg"
         alt="Image 6"
       />
@@ -58,30 +64,6 @@ import BentoItem from "@/components/BentoItem.astro";
         orientation="horizontal"
         src="/images/img-7.jpg"
         alt="Image 7"
-      />
-      <BentoItem
-        type="image"
-        orientation="horizontal"
-        src="/images/img-8.jpg"
-        alt="Image 8"
-      />
-      <BentoItem
-        type="image"
-        orientation="vertical"
-        src="/images/img-9.jpg"
-        alt="Image 9"
-      />
-      <BentoItem
-        type="image"
-        orientation="vertical"
-        src="/images/img-10.jpg"
-        alt="Image 10"
-      />
-      <BentoItem
-        type="video"
-        orientation="horizontal"
-        src="/video.webm"
-        alt="Video"
       />
     </BentoGrid>
   </section>
