chore: Update video sources in BentoItem and Video sections

--- a/src/components/sections/Content.astro
+++ b/src/components/sections/Content.astro
@@ -32,7 +32,7 @@ import BentoItem from "@/components/BentoItem.astro";
       <BentoItem
         type="video"
         orientation="horizontal"
-        src="/reel-earcuff.mp4"
+        src="https://utfs.io/f/9b6797a7-4bb3-4673-8ba2-5ca4a3afe456-1zral.webm"
         alt="Video"
       />
       <BentoItem
@@ -50,7 +50,7 @@ import BentoItem from "@/components/BentoItem.astro";
       <BentoItem
         type="video"
         orientation="vertical"
-        src="/reel-earcuff.mp4"
+        src="https://utfs.io/f/50ee9ac5-083c-4e0b-981c-ca736fa53b66-71x9kb.mp4"
         alt="Video"
       />
       <BentoItem
