--- a/src/components/sections/Video.astro
+++ b/src/components/sections/Video.astro
@@ -1,5 +1,4 @@
 ---
-import { Icons } from "@/components/Icons";
 import { SoundButton } from "@/components/SoundButton";
 ---
 
@@ -16,7 +15,11 @@ import { SoundButton } from "@/components/SoundButton";
     muted
     playsinline
     id="main-video"
-    preload="metadata"><source src="/video.webm" type="video/webm" /></video
+    preload="metadata"
+    ><source
+      src="https://utfs.io/f/1e3c70bc-8bfd-498f-8984-c52b5ea34973-ifdiaw.mp4"
+      type="video/mp4"
+    /></video
   >
 </div>
 
