--- a/src/components/BentoItem.astro
+++ b/src/components/BentoItem.astro
@@ -25,7 +25,7 @@ const classes = `${baseClass} ${orientationClass} ${videoClass}`;
 {
   type === "video" && (
     <video class={classes} autoplay loop muted playsinline preload="metadata">
-      <source src={src} type="video/webm" />
+      <source src={src} />
     </video>
   )
 }
