Update experience descriptions and company names

--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -13,14 +13,14 @@ import SectionTitle from "@/components/SectionTitle.astro";
       dateEnd="May 2024"
       title="Growth Marketer"
       company="Teilur.ai"
-      description="I'm responsible for creating audiovisual content and strategies for social media. I also handle AI tools for campaign optimization."
+      description="I was responsible for the creation of audiovisual content and strategies for social networks. I also use AI tools for scripting, content creation and campaign optimization."
     />
     <ExperienceCard
       dateStart="December 2022"
       dateEnd="May 2023"
       title="Ecommerce Manager"
       company="Grupo Caicedo SAS"
-      description="I manage sales campaigns on TikTok ads, increasing sales by 20%. I also create and optimize landing pages, and use AI tools to optimize campaigns."
+      description="Managed sales campaigns on TikTok ads, increasing sales by 20%. I created audiovisual content for TikTok Ads and Facebook Ads. I also created and optimized landing pages in Shopify."
     />
     <ExperienceCard
       dateStart="September 2022"
@@ -34,7 +34,7 @@ import SectionTitle from "@/components/SectionTitle.astro";
       dateEnd="December 2022"
       title="Social Media Manager & Co-founder"
       company="Semiluna Joyas"
-      description="I create audiovisual content and develop strategies for social media and campaigns through Facebook Ads."
+      description="Create audiovisual content and developed strategies for social networks and campaigns through Facebook Ads. Increased presence, awareness and sales of the brand through social networks."
     />
   </section>
 </div>
